@@ -1,3 +1,6 @@
+2013-11-21  Roland Clobus <rclobus@rclobus.nl>
+	* client/gtk/quote-view.c: Replaced GdkPixmap by cairo_surface_t.
+
 2013-11-19  Roland Clobus <rclobus@rclobus.nl>
 	* common/Makefile.am: Build version.h when needed.
 	* client/gtk/connect.c: GtkObject->GtkAdjustment (for Gtk+3).
